Aktualisierung für Java25